# email-triage-env-2-

./: Dockerfile  LICENSE  README.md  baseline.py  environment.py  inference.py  openenv.yaml  pyproject (2).toml  pyproject.toml  requirements.txt  server.py
server/: app.py
