[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage OpenEnv - Real-world email triage environment"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "openai==1.14.0",
    "pyyaml==6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"
